# rekordbox_db_rs

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs  rekordbox_db.rs  virtualdj_db.rs
tests/demo_db/: database.xml  master.db  master.db-shm  master.db-wal
tests/demo_db/share/PIONEER/USBANLZ/04e/a7054-c0b1-4db4-897b-30c952bf9098/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/11d/24f40-14a5-4b41-b751-c360ab8f669e/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/350/2b4c9-dbca-48c9-9065-57b50f1e8ff9/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/457/b2c32-c192-48b9-bf2c-72f2c14c9a18/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/45a/89480-e3cc-4efb-b67d-dfa968230e86/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/47a/1db31-2424-4062-b318-1e243871ba6c/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/4b1/9635f-30c4-493e-9c3d-a86e9d5fbbe0/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/58e/e4511-1df5-4f7d-b8ae-b34781d3df7d/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/5e0/944e8-9e5d-4ade-9f66-c9a7ebb43dd5/: ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/6df/2b3b0-b6ff-4e75-9420-6ba6d5643712/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/871/3c919-c9cd-490d-8066-28205220640d/: ANLZ0000.2EX  ANLZ0000.EXT
tests/demo_db/share/PIONEER/USBANLZ/875/b5f12-d0bb-4cba-880f-3b71f0a09f46/: ANLZ0000.2EX  ANLZ0000.EXT
(+15 files in other folders)
